src/objects/Agency_Program__c.object
<CustomObject>
    <description>PRM- Agency Program Catalog</description>
    <fields>
        <fullName>Count_Master_Template__c</fullName>
        <description>PRM_ContractTemplate - count No of master template for an agency program</description>
        <label>Count_Master_Template</label>
        <summaryFilterItems>
            <field>Contract_Template__c.Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Template__c.Agency_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Docusign_Contract_Template_Readiness__c</fullName>
        <description>PRM-Contract Template readiness</description>
        <formula>IF(Count_Master_Template__c == 0, &quot; There is no contract template set as Master for this agency program. One contract template for an agency program should be master. Please correct the issue to create the contract template. &quot;, IF(Count_Master_Template__c &gt; 1, &quot;A contract template of this agency program already exists as Master. Only one contract template can be set as Master for an agency program. Please correct the issue to create the contract template.&quot;, IF(Count_Master_Template__c == 1, &quot;You have set up contract template(s) for this agency program.&quot;, &quot;&quot;)))</formula>
        <label>Docusign Contract Template Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_in_month__c</fullName>
        <label>Duration (in month)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Notification__c</fullName>
        <label>First Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agency Programs</relationshipLabel>
        <relationshipName>Agency_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Notification__c</fullName>
        <label>Second Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Notification__c</fullName>
        <label>Third Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible_in_PRM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PRM-792 : check for visibility on community portal.</description>
        <label>Visible in PRM?</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Program</label>
    <nameField>
        <label>Partner Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AP_VR01_CharacterLimit</fullName>
        <active>true</active>
        <description>To Limit Agency Program Name character to 70.</description>
        <errorConditionFormula>LEN(Name)&gt;70</errorConditionFormula>
        <errorMessage>Name should not be greater than 70 characters</errorMessage>
    </validationRules>
</CustomObject>